# tosec-manager

./: LICENSE  README.md  filecopier.py  filters.py  grouper.py  parser.py  pyproject.toml  tosec.py
tests/: fixtures.py  test_bestchoice.py  test_filecopier.py  test_group_by.py  test_parser.py  test_tosec_command.py
